--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,10 +57,11 @@ body {
 }
 
 a {
-  color: #d5000d;
+  color: #5f65a6;
 }
+
 a:hover {
-  color: #c5000c;
+  color: #8088e0;
 }
 
 header {
@@ -252,7 +253,7 @@ h2 {
 } 
 
 h3 {
-  color: #d5000d;
+  color: #2b2b2b;
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 8px;
