--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Gafata', sans-serif;
   -webkit-font-smoothing: antialiased;
   -webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
-  margin-top: 46px;
+  margin-top: 56px;
   background: #edf1f2;
 }
 
@@ -65,6 +65,7 @@ body {
 }
 
 .navbar {
+  padding-top: 10px;
   position: fixed;
   top: 0px;
   width: 960px;
