--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
   font-family: 'Gafata', sans-serif;
   -webkit-font-smoothing: antialiased;
   -webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
+  -moz-font-smoothing: antialiased;
+  -moz-text-shadow: rgba(0,0,0,.01) 0 0 1px;
   margin-top: 56px;
   background: #edf1f2;
 }
